@@ -58,8 +58,14 @@ class Roda
         # Define routing methods that will store class level routes.
         [:root, :on, :is, :get, :post, :delete, :head, :options, :link, :patch, :put, :trace, :unlink].each do |meth|
           define_method(meth) do |*args, &block|
-            opts[:class_level_routes] << [meth, args, block]
+            opts[:class_level_routes] << [meth, args, block].freeze
           end
+        end
+
+        # Freeze the class level routes so that there can be no thread safety issues at runtime.
+        def freeze
+          opts[:class_level_routes].freeze
+          super
         end
       end
 
